[gd_scene load_steps=8 format=2]

[ext_resource path="res://nodes/UI/menu_fight.gd" type="Script" id=1]
[ext_resource path="res://nodes/UI/bar.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxFlat" id=1]

bg_color = Color( 0.417969, 0.740814, 1, 1 )
border_width_left = 8
border_color = Color( 0.559784, 0.863281, 0.74947, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 10
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=2]

bg_color = Color( 0.560784, 0.905882, 0.615686, 1 )
border_width_left = 8
border_color = Color( 0.846684, 0.863281, 0.559784, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 10
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=3]

bg_color = Color( 0.167969, 0.219971, 1, 1 )
draw_center = false
border_width_left = 8
border_width_bottom = 1
border_color = Color( 0.623529, 0.862745, 0.556863, 0.494157 )
corner_radius_top_left = 10
corner_radius_bottom_left = 10
corner_detail = 1
shadow_color = Color( 0.5578, 0.864588, 0.593451, 0.6 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=4]

bg_color = Color( 0.146362, 0.147957, 0.171875, 1 )
border_width_left = 8
border_color = Color( 0.686275, 0.352941, 0.352941, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 10
corner_detail = 1
shadow_size = 1

[sub_resource type="StyleBoxFlat" id=5]

bg_color = Color( 0.167969, 0.219971, 1, 1 )
border_width_left = 8
border_color = Color( 0.559784, 0.849055, 0.863281, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 10
corner_detail = 1

[node name="FightMenu" type="Panel"]
self_modulate = Color( 1, 1, 1, 0.501961 )
margin_right = 360.0
margin_bottom = 160.0
script = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 2.0
margin_top = 30.0
margin_right = 358.0
margin_bottom = 157.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]

[node name="Back" type="Button" parent="."]
margin_top = 2.0
margin_right = 60.0
margin_bottom = 20.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "BACK"
clip_text = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 62.0
margin_top = 2.0
margin_right = 358.0
margin_bottom = 22.0
color = Color( 0, 0, 0, 0.192118 )

[node name="Label" type="Label" parent="."]
margin_left = 62.0
margin_top = 2.0
margin_right = 358.0
margin_bottom = 22.0
valign = 1
clip_text = true

[node name="SkillPanel" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 1, 0.937255, 0.717647 )
margin_top = 22.0
margin_right = 360.0
margin_bottom = 360.0

[node name="ScrollContainer" type="ScrollContainer" parent="SkillPanel"]
margin_left = 2.0
margin_top = 28.0
margin_right = 358.0
margin_bottom = 328.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="SkillPanel/ScrollContainer"]

[node name="SkillBack" type="Button" parent="SkillPanel"]
margin_top = 2.0
margin_right = 60.0
margin_bottom = 22.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "BACK"
clip_text = true

[node name="ColorRect" type="ColorRect" parent="SkillPanel"]
margin_left = 70.0
margin_top = 2.0
margin_right = 350.0
margin_bottom = 22.0
color = Color( 0, 0, 0, 0.329412 )

[node name="Bar" parent="SkillPanel" instance=ExtResource( 2 )]
visible = false
margin_left = 62.0
margin_top = 5.0
margin_right = 358.0
margin_bottom = 19.0

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="SkillPanel/SkillBack" to="." method="_on_SkillBack_pressed"]
